# olx-scrapie

./: .env.example  .gitattributes  Cargo.toml  README.md  docker-compose.yml  tasks.md
migrations/: 20220928000001_create_sessions_table.sql  20220928000001_create_sessions_table.up.sql  20220928000002_create_page_type_enum.down.sql  20220928000002_create_page_type_enum.up.sql  20220929081054_create_crawl_status_enum.down.sql  20220929081054_create_crawl_status_enum.up.sql  20220929081055_create_crawler_queue_table.down.sql  20220929081055_create_crawler_queue_table.sql  20220929081055_create_crawler_queue_table.sql.bak  20220929081055_create_crawler_queue_table.up.sql  20220929193250_create_pages_table.sql  20220929193250_create_pages_table.up.sql  20221006104233_create_sessions_table.up.sql  20221018130849_create_classifieds_table.down.sql  20221018130849_create_classifieds_table.up.sql  20221024111311_create_cardian_direction_type.down.sql  20221024111311_create_cardian_direction_type.up.sql  20221024111318_create_property_layout_type.down.sql  20221024111318_create_property_layout_type.up.sql  20221024111321_create_property_type_type.down.sql  20221024111321_create_property_type_type.up.sql  20221024111326_create_seller_type_type.down.sql  20221024111326_create_seller_type_type.up.sql  20221024111417_create_classifieds_table.up.sql  20221024111432_alter_sessions_rename_completed_at_to_crawled_at.down.sql  20221024111432_alter_sessions_rename_completed_at_to_crawled_at.up.sql
src/: config.rs  jobs.rs  lib.rs  list_sessions.rs  main.rs  page.rs  session.rs  util.rs  utils.rs
src/crawler/: command.rs  job.rs  mod.rs  page.rs
(+14 files in other folders)
