[package]
name = "olx-scrapie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
dotenv = "0.15"
futures = "0.3.24"
reqwest = { version = "0.11", features = ["serde_json"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "time", "macros", "migrate", "sqlx-macros", "uuid", "offline", "json"] }
tokio = { version = "1.21", features = ["macros", "test-util", "fs", "net", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log", "async-await"] }
