[package]
name = "olx_scrapie"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "olx_scrapie"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
num_cpus = "1"
reqwest = { version = "0.11", features = ["serde_json", "blocking"] }
scraper = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "time", "macros", "migrate", "sqlx-macros", "uuid", "offline", "json", "chrono"] }
tokio = { version = "1", features = ["macros", "test-util", "fs", "net", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log", "async-await"] }
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
httpmock = "0.6"
once_cell = "1"
